SKIE/acceptance-tests/functional/src/test/resources/tests/functions/deprecation/error/suspend/A.kt
package `tests`.`functions`.`deprecation`.`error`.`suspend`

@Deprecated("Some error", level = DeprecationLevel.ERROR)
suspend fun foo() {
}
